JS 1) enabling hooks