@@ -37,12 +37,10 @@ class Application extends CI_Controller {
 		$this->data['content'] = $this->parser->parse($this->data['pagebody'], $this->data, true);
 
                 //convert caboose output into view parameters
-                //$this->data['caboose_styles'] = $this->caboose->styles();
-               // $this->data['caboose_scripts'] = $this->caboose->scripts();
-               // $this->data['caboose_trailings'] = $this->caboose->trailings();
-
-                
-                
+                $this->data['caboose_styles'] = $this->caboose->styles();
+                $this->data['caboose_scripts'] = $this->caboose->scripts();
+                $this->data['caboose_trailings'] = $this->caboose->trailings();
+ 
 		// finally, build the browser page!
 		$this->data['data'] = &$this->data;
 		$this->parser->parse('_template', $this->data);
