@@ -1,1 +1,2 @@
 JS 1) enabling hooks
+JS 2) caboose setup
